--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ click~=8.0.1
 numpy~=1.21.2
 scipy~=1.7.1
 pandas~=1.3.2
-prophet~=1.0.1
-python-dateutil~=2.8.2
+# TODO: figure out prophet and pip install
+# prophet~=1.0.1
+# python-dateutil~=2.8.2
