Change trigger to main branch

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,9 +2,9 @@ name: Build & Test
 
 on:
   push:
-    branches: [ master, ci_setup ]
+    branches: [ main, ci_setup ]
   pull_request:
-    branches: [ master, ci_setup ]
+    branches: [ main, ci_setup ]
 
 jobs:
   build:
