Remove pm4py dependency, #56

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ l_input_files/
 input_output_files/
 compressed_datasets/
 venv/
+.venv/
+*.egg-info/
+build/
 l_output_files/
 Simod/
 bimp_test_examples/sim_output/
