--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
-setuptools~=57.0.0
-pytz~=2021.1
-pm4py~=2.2.12
-click~=8.0.1
-numpy~=1.21.2
-scipy~=1.7.1
-pytest~=6.2.5
-pandas~=1.3.2
-python-dateutil~=2.8.2
-
+attrs==23.1.0
+click==8.0.4
+DiffResBP-Simulator==0.1.0
+exceptiongroup==1.1.1
+iniconfig==2.0.0
+numpy==1.21.6
+packaging==23.1
+pandas==1.3.5
+pluggy==1.0.0
+py==1.11.0
+pytest==6.2.5
+python-dateutil==2.8.2
+pytz==2021.3
+scipy==1.7.3
+simpy==4.0.1
+six==1.16.0
+toml==0.10.2
+tomli==2.0.1
