--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,20 +2,35 @@ name: Build & Test
 
 on:
   push:
-    branches: [ main, ci_setup ]
+    branches: [main, ci_setup]
   pull_request:
-    branches: [ main, ci_setup ]
+    branches: [main, ci_setup]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v2.3.0
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Python 3.9
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.8
-      - run: pip install -r requirements.txt
-      - run: pip install --editable .
-      - run: pytest testing_scripts/
+          python-version: 3.9
+
+      - name: Install poetry
+        run: |
+          python -m pip install poetry==1.4.2
+
+      - name: Configure poetry (for saving venv inside of the project)
+        run: |
+          python -m poetry config virtualenvs.in-project true
+
+      - name: Install dependencies
+        run: |
+          poetry install
+
+      - name: Run tests
+        run: |
+          poetry run pytest
