--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.9,<3.12"
 click = "^8.1.3"
 numpy = "^1.24.3"
 pandas = "^2.0.1"
@@ -19,6 +19,8 @@ python-dateutil = "^2.8.2"
 pytz = "^2023.3"
 scipy = "^1.10.1"
 pm4py = "^2.7.4"
+pix-framework = "^0.8.8"
+pylint = "^2.17.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
