--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,5 @@ pytest = "^7.3.1"
 prosimos = "cli.diff_res_bpsim:cli"
 
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
