--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [tool.poetry]
 name = "prosimos"
-version = "1.2.7"
+version = "1.2.8"
 description = ""
-authors = ["Iryna Halenok, Orlenys López Pintado"]
+authors = [
+    "Iryna Halenok <iryna.halenok@ut.ee>",
+    "Orlenys López Pintado <orlenyslp@gmail.com>",
+]
 readme = "README.md"
 packages = [
-    {include = "cli"},
-    {include = "prosimos"},
-    {include = "bpdfr_discovery"}
+    { include = "cli" },
+    { include = "prosimos" },
+    { include = "bpdfr_discovery" },
 ]
 
 [tool.poetry.dependencies]
@@ -19,7 +22,7 @@ python-dateutil = "^2.8.2"
 pytz = "^2023.3"
 scipy = "^1.10.1"
 pm4py = "^2.7.4"
-pix-framework = "^0.10.0"
+pix-framework = "^0.11.1"
 pylint = "^2.17.4"
 
 [tool.poetry.dev-dependencies]
